--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme furo
+      - name: Build tasks.rst
+        run: |
+          python create_tasks_rst.py
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/html
