--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -19,6 +19,9 @@ jobs:
           -H 'Accept: application/vnd.github.v3.raw' \
           -O \
           -L https://api.github.com/repos/owner/individual-brain-charting/public_analysis_code/main/ibc_data
+      - name: See location, current path
+        run: |
+          pwd; ls
       - name: Build tasks.rst
         run: |
           python create_tasks_rst.py
