--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -11,17 +11,20 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme furo numpy pandas
-      - name: Get files
-        env:
-          TOKEN: ${{ secrets.FILE_UPDATE }}
+      - name: Get description files
         run: |
-          curl -H 'Authorization: token ${TOKEN}' \
-          -H 'Accept: application/vnd.github.v3.raw' \
-          -O \
-          -L https://api.github.com/repos/owner/individual-brain-charting/public_analysis_code/main/ibc_data
-      - name: See location, current path
-        run: |
-          pwd; ls
+          curl -L -O \
+          -H "Accept: application/vnd.github.v4.raw" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv \;
+          curl -L -O \
+          -H "Accept: application/vnd.github.v4.raw" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv \;
+          curl -L -O \
+          -H "Accept: application/vnd.github.v4.raw" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv
       - name: Build tasks.rst
         run: |
           python create_tasks_rst.py
