--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -13,18 +13,9 @@ jobs:
           pip install sphinx sphinx_rtd_theme furo numpy pandas
       - name: Get description files
         run: |
-          curl -L -O \
-          -H "Accept: application/vnd.github.v4.raw" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv \;
-          curl -L -O \
-          -H "Accept: application/vnd.github.v4.raw" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv \;
-          curl -L -O \
-          -H "Accept: application/vnd.github.v4.raw" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv ;
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv ;
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv
       - name: Build tasks.rst
         run: |
           python create_tasks_rst.py
