--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design
+          pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser
       - name: Get description files
         run: |
           curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv ;
