--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -1,5 +1,12 @@
-name: Docs
-on: [push, pull_request, workflow_dispatch, repository_dispatch]
+name: Build Docs
+on: 
+  push:
+    branches:
+      - main
+    paths:
+      - docs
+      - .github/workflows
+  repository_dispatch:
 permissions:
     contents: write
 jobs:
@@ -13,12 +20,12 @@ jobs:
           pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser
       - name: Get description files
         run: |
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv ;
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv ;
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv --output docs/ibc_tasks.tsv;
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv --output docs/ibc_conditions.tsv;
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv --output docs/all_contrasts.tsv
       - name: Build tasks.rst
         run: |
-          python create_tasks_rst.py
+          python docs/create_tasks_rst.py
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/html
