--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
     paths:
-      - docs
-      - .github/workflows
+      - ./docs/*
+      - ./.github/workflows/ibc_documentation.yml
   repository_dispatch:
 permissions:
     contents: write
