--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -20,12 +20,16 @@ jobs:
           pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser
       - name: Get description files
         run: |
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_tasks.tsv --output docs/ibc_tasks.tsv;
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/ibc_conditions.tsv --output docs/ibc_conditions.tsv;
-          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/all_contrasts.tsv --output docs/all_contrasts.tsv
+          curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/{ibc_tasks.tsv,ibc_conditions.tsv,all_contrasts.tsv}
       - name: Build tasks.rst
         run: |
           python docs/create_tasks_rst.py
+      - name: Get API repo
+        run: |
+          git clone git@github.com:individual-brain-charting/api.git
+      - name: Build API reference page
+        run: |
+          sphinx-apidoc -f -o docs/source api/src/ibc_api -TE -t docs/source/_template
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/html
