--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          apt install pandoc
+          sudo apt install pandoc
           pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser nbsphinx
       - name: Get description files
