--- a/.github/workflows/ibc_documentation.yml
+++ b/.github/workflows/ibc_documentation.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           sudo apt install pandoc
           pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser nbsphinx
+          pip install sphinx sphinx_rtd_theme furo numpy pandas sphinx_design myst-parser nbsphinx IPython
       - name: Get description files
         run: |
           curl -L -O -H "Accept: application/vnd.github.v4.raw" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/individual-brain-charting/public_analysis_code/contents/ibc_data/\{ibc_tasks.tsv,ibc_conditions.tsv,all_contrasts.tsv\}
